--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -1,1 +1,14 @@
 @import 'setup';
+
+body {
+    // background:pink;
+}
+
+input[type=search] {
+    border-top:none;
+    border-right:none;
+    border-left:none;
+    border-bottom:1px solid grey;
+    background:transparent;
+    padding:10px;
+}
