--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -1,1 +1,19 @@
 @import 'setup';
+
+body {
+    height: 100vh;
+}
+.search__container {
+    width: 100%;
+    border: 1px solid red;
+}
+main {
+    display: flex;
+    flex-direction: row;
+    border: 1px solid red;
+    .hero__container {
+        width: 33%;
+        height: 400px;
+        border: 1px solid red;
+    }
+}
