--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -1,22 +1,28 @@
 @import 'setup';
 @import 'utils';
-@import 'header';
-@import 'main';
-@import 'footer';
-
-
-@font-face {
-    font-family: "Big Noodle Too";
-    src: url(../font/big_noodle_titling_oblique.ttf) format("truetype");
-}
+// @import 'typography';
 
 * {
     margin:0;
 }
 
 body {
-    font-family: "Big Noodle Too";
+    background:$primaryDark;
+    color:$white;
+    font-size:1.6rem;
+    font-family:'Nunito', sans-serif;
 }
+
+@import 'header';
+@import 'main';
+@import 'footer';
+
+
+// @font-face {
+//     font-family: "Big Noodle Too";
+//     src: url(../../Font/big_noodle_titling.ttf) format("truetype");
+// }
+
 
 img {
     width:100%;
@@ -30,4 +36,23 @@ input[type=search] {
     border-bottom:1px solid grey;
     background:transparent;
     padding:10px;
+}
+
+.OW__Logo {
+    // border:1px solid orange;
+    width:30%;
+    transition:width 1s ease-in-out;
+    .large__bit {
+        fill:white;
+    }
+    .small__bit {
+        fill:$accentDark;
+    }
+}
+
+h1 {
+    display:none;
+    width:0%;
+    opacity:0;
+    transition:width 1s;
 }
