added some styles to main

--- a/dev/styles/_utils.scss
+++ b/dev/styles/_utils.scss
@@ -4,7 +4,7 @@ $secondaryDark: #218ffe;
 $accentDark: #fc9e00;
 $logoGrey: #484848;
 
-// $secondaryFont: 'Big Noodle Too';
+$secondaryFont: 'Big Noodle Too';
 
 // $base: #43484c;
 
