--- a/dev/styles/_main.scss
+++ b/dev/styles/_main.scss
@@ -1,23 +1,57 @@
 main {
     margin-top:100px;
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    // grid-template-rows: 1fr;
+    grid-template-columns: 0.9fr 2fr;
+    grid-template-rows:200px 200px;
     grid-gap: 20px;
+    max-height:80vh;   
     .hero__container {
+        background: url(../../assets/NepalBG.jpg) no-repeat;
+        background-size:cover;
         border:1px solid cyan;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-gap: 5px;
+        grid-template-rows:1fr 1fr;
+        grid-auto-flow: dense;
+        height:80vh;
+        .hero__image {
+            // border:1px solid white;
+            grid-row-end: -1;
+            grid-column-end:-1;
+            position: fixed;
+            right:0;
+            width:35%;
+        }
+        .hero__info {
+            background:rgba(0,0,0,0.5);
+            padding:30px;
+            width:auto;
+            height:100%;
+            list-style:none;
+            text-align: right;
+            // border:1px solid yellow;
+            position: relative;
+            li {
+                @include paragraph-styles(1.8)
+            }
+            li span {
+                text-align: left;
+                position: absolute;
+                left:20px;
+                font-family: "Big Noodle Too";
+                @include title-styles(2.75);
+    
+            }
+        }
         #map {
-            grid-column: 1 / -1;
+            grid-row-end:-1;
+            height:auto;
         }
     }
 }
 
 aside {
     border:1px dotted $accentDark;
-    // background-color: limegreen;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: min-content;
