--- a/dev/styles/_typography.scss
+++ b/dev/styles/_typography.scss
@@ -1,14 +1,15 @@
 @mixin title-styles($sizeValue) {
     font-size: $sizeValue * 1px;
-    font-size: ($sizeValue/10) * 1rem;
-    font-family: $basefont2;
+    font-size: ($sizeValue) * 1rem;
+    font-family: $secondaryFont;
 }
 @mixin paragraph-styles($sizeValue) {
     font-size: $sizeValue * 1px;
-    font-size: ($sizeValue/10) * 1rem;
-    font-family: $basefont1;
+    font-size: ($sizeValue) * 1rem;
+    // font-family: $basefont1;
     font-weight: 400;
     letter-spacing: 1px;
+    line-height:1.5;
 }
 html {
     font-size: 62.5%;
@@ -16,39 +17,47 @@ html {
 body {
     font-size: 1.6rem;
 }
-h1 {
-    @include title-styles (82);
-    padding: 20px 0;
-    color: $dkgrey;
+
+@font-face {
+    font-family: "Big Noodle Too";
+    src: url(../../Font/big_noodle_titling.ttf) format("truetype");
 }
-h2 {
-    @include paragraph-styles (35);
-    padding: 0 15px 40px 15px;
-    text-align: left;
-    color: $dkgrey;
-}
-h3 {
-    @include title-styles (60);
-    text-align: center;
-    color: $red;
-    text-shadow: 1px 1px 2px $mdgrey;
-    padding-top: 20px;
-}
-h4 {
-    @include title-styles (400);
-    color: $blue;
-}
-h5 {
-    @include paragraph-styles(20);
-    padding: 25px 0;
-    text-align: center;
-}
-ul, li {
-    @include paragraph-styles (25);
-    line-height: 50px;
-}
-p {
-    @include paragraph-styles (30);
-    padding: 25px 0;
-    text-align: center;
-}
+
+
+
+// h1 {
+//     @include title-styles (82);
+//     padding: 20px 0;
+//     color: $dkgrey;
+// }
+// h2 {
+//     @include paragraph-styles (35);
+//     padding: 0 15px 40px 15px;
+//     text-align: left;
+//     color: $dkgrey;
+// }
+// h3 {
+//     @include title-styles (60);
+//     text-align: center;
+//     color: $red;
+//     text-shadow: 1px 1px 2px $mdgrey;
+//     padding-top: 20px;
+// }
+// h4 {
+//     @include title-styles (400);
+//     color: $blue;
+// }
+// h5 {
+//     @include paragraph-styles(20);
+//     padding: 25px 0;
+//     text-align: center;
+// }
+// ul, li {
+//     @include paragraph-styles (25);
+//     line-height: 50px;
+// }
+// p {
+//     @include paragraph-styles (30);
+//     padding: 25px 0;
+//     text-align: center;
+// }
