changed BGs for contrast and art why not

--- a/dev/styles/_header.scss
+++ b/dev/styles/_header.scss
@@ -1,5 +1,6 @@
 header {
     background:$primaryDark;
+    background:url('https://wallpapermemory.com/uploads/669/triangle-background-hd-1920x1080-269429.jpg');
     // border:1px solid red;
     height:100vh;
     z-index:100;
