--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -8,6 +8,8 @@
 
 body {
     background:$primaryDark;
+    background:url(../../assets/darkbg.jpeg);
+    background-size:cover;
     color:$white;
     font-size:1.6rem;
     font-family:'Nunito', sans-serif;
