--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -8,7 +8,7 @@
 
 body {
     background:$primaryDark;
-    background:url(../../assets/darkbg.jpeg);
+    background:url(../../assets/trianglebg.jpg);
     background-size:cover;
     color:$white;
     font-size:1.6rem;
