search container styles

--- a/dev/styles/_main.scss
+++ b/dev/styles/_main.scss
@@ -88,21 +88,14 @@ aside {
     }
     .search__results__card {
         // border:1px solid red;
-        // background:url(../../assets/OWBackground.gif);
-        // background:linear-gradient(to top, white, transparent);
+        background:rgba(0,0,0,0.5);
         background-size:cover;
         position: relative;
-        // .hero__card {
-        //     perspective: 2000px;
-        //     &:hover img {
-        //         transform: rotateY(10deg);
-        //         transition: transform 1s ease;
-        //     } 
-        // }
     }
     .hero__card__heading {
-        // text-align: center;
-        border:1px solid red;
+        background:$logoGrey;
+        text-align: center;
+        // border:1px solid red;
     }
 
 }
