--- a/dev/styles/_main.scss
+++ b/dev/styles/_main.scss
@@ -18,9 +18,10 @@ main {
             grid-row-end: -1;
             grid-column-end:-1;
             position: fixed;
-            right:0;
+            right:10%;
             bottom:0;
             width:45%;
+            z-index:50;
             perspective: 1000px;
             &:hover img {
                 transform: rotateY(-10deg);
@@ -35,6 +36,7 @@ main {
             text-align: right;
             // border:1px solid yellow;
             position: relative;
+            grid-column:1/3;
             li {
                 @include paragraph-styles(1.8);
                 // border:1px solid cyan;
@@ -61,7 +63,7 @@ main {
     background: radial-gradient(rgba(0,0,0,0.5), transparent), url(../../assets/NepalBG.jpg) no-repeat;
     background-size:cover;
     .hero__info {
-        background:rgba(0,0,0,0.5);
+        background:rgba(0,0,0,0.3);
     }
 }
 
