--- a/dev/styles/_main.scss
+++ b/dev/styles/_main.scss
@@ -37,6 +37,14 @@ main {
             // border:1px solid yellow;
             position: relative;
             grid-column:1/3;
+            .location {
+                animation:flash 2s infinite;
+                transition:all 0.5s;
+                &:hover {
+                    color:$accentDark;
+                    animation:revflash 2s infinite;
+                }
+            }
             li {
                 @include paragraph-styles(1.8);
                 // border:1px solid cyan;
@@ -49,7 +57,6 @@ main {
                 @include title-styles(2.75);
                 // border:1px solid red;
                 line-height:1;
-    
             }
         }
         #map {
