--- a/dev/styles/_header.scss
+++ b/dev/styles/_header.scss
@@ -28,6 +28,8 @@ header {
             opacity:0;
             width:0px;
             transition:width 0.5s;
+            @include title-styles(3);
+            letter-spacing: 2px;
         }
         .input__bar.show {
             display:block;
@@ -37,7 +39,7 @@ header {
             padding:10px 30px 8px 0;
             margin:0 20px;
             // color:$white;
-            width:100%;
+            width:80%;
             opacity:1;
             text-transform: uppercase;
         }
