--- a/dev/styles/_header.scss
+++ b/dev/styles/_header.scss
@@ -21,6 +21,16 @@ header {
         align-items: center;
         .OW__Logo.shrink {
             width:5%;
+            // border:1px solid red;
+            @include breakPoint(second-break) {
+                width:8%;
+            }
+            @include breakPoint(fourth-break) {
+                width:10%;
+            }
+            @include breakPoint(fifth-break) {
+                width:12%;
+            }
         }
         .input__bar--text {
             display:none;
@@ -42,6 +52,13 @@ header {
             width:80%;
             opacity:1;
             text-transform: uppercase;
+            @include breakPoint(third-break) {
+                @include title-styles(2.5);
+                width:60%;
+            }
+            @include breakPoint(fifth-break) {
+                @include title-styles(2);
+            }
         }
         .input__submit {
             display:none;
@@ -62,6 +79,14 @@ header {
 header.fixed {
     height:10vh;
     background:none;
+    @include breakPoint(second-break) {
+        .OW__Logo.shrink {
+            width:8%;
+            @include breakPoint(fourth-break) {
+                width:10%;
+            }
+        }
+    }
     .wrapper {
         justify-content: flex-start;
         padding:25px 0 0 15px;
@@ -85,6 +110,15 @@ header.fixed {
         display:block;
         align-self: center;
         opacity: 1;
+        @include breakPoint(second-break) {
+            width:50%;
+        }
+        @include breakPoint(fourth-break) {
+            width:60%;
+        }
+        @include breakPoint(sixth-break) {
+            width:70%;
+        }
     }
 }
 
