--- a/dev/styles/_typography.scss
+++ b/dev/styles/_typography.scss
@@ -22,6 +22,9 @@ h3 {
     @include title-styles (4.5);
     font-family: $secondaryFont;
     letter-spacing: 2px;
+    @include breakPoint(fourth-break) {
+        @include title-styles (3);
+    }
 }
 h4 {
     @include title-styles (4.5);
@@ -29,4 +32,7 @@ h4 {
     text-transform: uppercase;
     color: $accentDark;
     letter-spacing:2px;
+    @include breakPoint(fourth-break) {
+        @include title-styles (3);
+    }
 }
