--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -189,6 +189,11 @@ h3 {
   font-family: "Big Noodle Too";
   font-family: "Big Noodle Too";
   letter-spacing: 2px; }
+  @media (max-width: 800px) {
+    h3 {
+      font-size: 3px;
+      font-size: 3rem;
+      font-family: "Big Noodle Too"; } }
 
 h4 {
   font-size: 4.5px;
@@ -198,6 +203,11 @@ h4 {
   text-transform: uppercase;
   color: #fc9e00;
   letter-spacing: 2px; }
+  @media (max-width: 800px) {
+    h4 {
+      font-size: 3px;
+      font-size: 3rem;
+      font-family: "Big Noodle Too"; } }
 
 * {
   margin: 0; }
@@ -227,8 +237,19 @@ header {
     display: flex;
     justify-content: center;
     align-items: center; }
+    header .wrapper .sign__out {
+      display: none; }
     header .wrapper .OW__Logo.shrink {
       width: 5%; }
+      @media (max-width: 1000px) {
+        header .wrapper .OW__Logo.shrink {
+          width: 8%; } }
+      @media (max-width: 800px) {
+        header .wrapper .OW__Logo.shrink {
+          width: 10%; } }
+      @media (max-width: 600px) {
+        header .wrapper .OW__Logo.shrink {
+          width: 12%; } }
     header .wrapper .input__bar--text {
       display: none;
       opacity: 0;
@@ -248,6 +269,17 @@ header {
       width: 80%;
       opacity: 1;
       text-transform: uppercase; }
+      @media (max-width: 950px) {
+        header .wrapper .input__bar.show {
+          font-size: 2.5px;
+          font-size: 2.5rem;
+          font-family: "Big Noodle Too";
+          width: 60%; } }
+      @media (max-width: 600px) {
+        header .wrapper .input__bar.show {
+          font-size: 2px;
+          font-size: 2rem;
+          font-family: "Big Noodle Too"; } }
     header .wrapper .input__submit {
       display: none; }
     header .wrapper .OW__Text {
@@ -261,6 +293,26 @@ header {
 header.fixed {
   height: 10vh;
   background: none; }
+  @media (max-width: 1000px) {
+    header.fixed .OW__Logo.shrink {
+      width: 8%; } }
+  @media (max-width: 1000px) and (max-width: 800px) {
+    header.fixed .OW__Logo.shrink {
+      width: 10%; } }
+  header.fixed .sign__out {
+    display: block;
+    position: fixed;
+    font-size: 3rem;
+    right: 20px;
+    top: 35px;
+    transition: color 0.3s ease-in-out;
+    z-index: 50;
+    color: white; }
+    header.fixed .sign__out:hover {
+      color: #fc9e00; }
+    @media (max-width: 800px) {
+      header.fixed .sign__out {
+        font-size: 2rem; } }
   header.fixed .wrapper {
     justify-content: flex-start;
     padding: 25px 0 0 15px;
@@ -280,6 +332,15 @@ header.fixed {
     display: block;
     align-self: center;
     opacity: 1; }
+    @media (max-width: 1000px) {
+      header.fixed .OW__Text {
+        width: 50%; } }
+    @media (max-width: 800px) {
+      header.fixed .OW__Text {
+        width: 60%; } }
+    @media (max-width: 500px) {
+      header.fixed .OW__Text {
+        width: 70%; } }
 
 .O, .V, .E, .R, .W, .A, .T, .C, .H {
   animation: slowfill 8s forwards infinite;
@@ -328,7 +389,14 @@ main {
     position: relative; }
     @media (max-width: 950px) {
       main .hero__container {
-        height: 70vh; } }
+        height: 100%; } }
+    @media (max-width: 800px) {
+      main .hero__container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr; } }
+    @media (max-width: 600px) {
+      main .hero__container {
+        grid-template-rows: 1fr 1fr 1fr; } }
     main .hero__container .hero__image {
       z-index: 50;
       perspective: 1000px;
@@ -337,15 +405,24 @@ main {
       main .hero__container .hero__image:hover img {
         transform: rotateY(-10deg);
         transition: transform 1s ease; }
-      @media (max-width: 1000px) {
+      @media (max-width: 1250px) {
         main .hero__container .hero__image {
           position: fixed;
-          width: 50%;
-          left: 35%; } }
-      @media (max-width: 950px) {
-        main .hero__container .hero__image {
           width: 40%;
           left: 45%; } }
+      @media (max-width: 1000px) {
+        main .hero__container .hero__image {
+          width: 45%;
+          left: 40%; } }
+      @media (max-width: 950px) {
+        main .hero__container .hero__image {
+          width: 40%; } }
+      @media (max-width: 800px) {
+        main .hero__container .hero__image {
+          position: relative;
+          grid-row: 1;
+          width: 70%;
+          left: 10%; } }
     main .hero__container .hero__info {
       padding: 30px;
       height: 100%;
@@ -354,6 +431,13 @@ main {
       position: absolute;
       top: 0;
       width: 100%; }
+      @media (max-width: 800px) {
+        main .hero__container .hero__info {
+          height: 100%; } }
+      @media (max-width: 600px) {
+        main .hero__container .hero__info {
+          position: relative;
+          height: auto; } }
       main .hero__container .hero__info .location {
         animation: flash 3s infinite;
         transition: all 0.5s;
@@ -362,20 +446,32 @@ main {
           color: white;
           animation: revflash 3s infinite; }
       main .hero__container .hero__info li {
+        z-index: 60;
         font-size: 1.8px;
         font-size: 1.8rem;
         font-weight: 400;
         letter-spacing: 1px;
-        line-height: 1.5;
-        z-index: 60; }
+        line-height: 1.5; }
+        @media (max-width: 600px) {
+          main .hero__container .hero__info li {
+            font-size: 1.4px;
+            font-size: 1.4rem;
+            font-weight: 400;
+            letter-spacing: 1px;
+            line-height: 1.5; } }
       main .hero__container .hero__info li span {
         position: absolute;
         left: 20px;
         font-family: "Big Noodle Too";
+        line-height: 1;
         font-size: 2.75px;
         font-size: 2.75rem;
-        font-family: "Big Noodle Too";
-        line-height: 1; }
+        font-family: "Big Noodle Too"; }
+        @media (max-width: 600px) {
+          main .hero__container .hero__info li span {
+            font-size: 2px;
+            font-size: 2rem;
+            font-family: "Big Noodle Too"; } }
     main .hero__container #map {
       grid-row-end: -1;
       grid-column: 1 / -1;
@@ -385,6 +481,10 @@ main {
         main .hero__container #map {
           width: 100%;
           grid-column: 1 / -1; } }
+  @media (max-width: 800px) {
+    main {
+      grid-template-rows: 50% 50%;
+      grid-template-columns: 1fr; } }
 
 .hero__container.show {
   background: radial-gradient(rgba(0, 0, 0, 0.5), transparent), url(../../assets/NepalBG.jpg) no-repeat;
@@ -405,7 +505,8 @@ aside {
     background: #484848;
     align-items: center;
     justify-content: center;
-    display: none; }
+    display: none;
+    text-align: center; }
   aside .search__results__heading.show {
     display: flex; }
   aside .search__results__card {
@@ -424,11 +525,19 @@ aside {
     grid-row-start: 4; }
   @media (max-width: 950px) {
     aside {
-      grid-template-rows: 100px 0.5fr 1fr;
-      height: 70vh; } }
+      grid-template-rows: 100px 100px;
+      height: 100%; } }
+  @media (max-width: 800px) {
+    aside {
+      height: 35vh; } }
+
+@media (max-width: 800px) {
+  .hero__card {
+    display: none; } }
 
 .search__wrapper {
   width: 100%;
+  height: 100%;
   margin-top: 5px; }
   .search__wrapper .search__container {
     height: 100%;
@@ -450,18 +559,24 @@ aside {
       .search__wrapper .input__bar--search {
         text-align: center;
         width: 75%; } }
+    @media (max-width: 800px) {
+      .search__wrapper .input__bar--search {
+        width: 90%; } }
   .search__wrapper .input__submit {
     width: 30%;
     background: none;
     color: white;
     border: 2px solid #fc9e00;
     transition: background 0.3s ease-in-out;
-    padding: 10px 15px; }
+    padding: 10px; }
     .search__wrapper .input__submit:hover {
       background: #fc9e00; }
     @media (max-width: 950px) {
       .search__wrapper .input__submit {
-        width: 80%; } }
+        width: 85%; } }
+    @media (max-width: 800px) {
+      .search__wrapper .input__submit {
+        width: 95%; } }
 
 img {
   width: 100%;
