--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -179,27 +179,23 @@ html {
   100% {
     text-shadow: 2px 1px 2px white; } }
 
-@font-face {
-  font-family: 'Big Noodle Too';
-  src: url(../../Font/big_noodle_titling.ttf) format("truetype"); }
-
 h3 {
   font-size: 4.5px;
   font-size: 4.5rem;
-  font-family: "Big Noodle Too", "Anton", sans-serif;
-  font-family: "Big Noodle Too", "Anton", sans-serif;
+  font-family: "Anton", sans-serif;
+  font-family: "Anton", sans-serif;
   letter-spacing: 2px; }
   @media (max-width: 800px) {
     h3 {
       font-size: 3px;
       font-size: 3rem;
-      font-family: "Big Noodle Too", "Anton", sans-serif; } }
+      font-family: "Anton", sans-serif; } }
 
 h4 {
   font-size: 4.5px;
   font-size: 4.5rem;
-  font-family: "Big Noodle Too", "Anton", sans-serif;
-  font-family: "Big Noodle Too", "Anton", sans-serif;
+  font-family: "Anton", sans-serif;
+  font-family: "Anton", sans-serif;
   text-transform: uppercase;
   color: #fc9e00;
   letter-spacing: 2px; }
@@ -207,7 +203,7 @@ h4 {
     h4 {
       font-size: 3px;
       font-size: 3rem;
-      font-family: "Big Noodle Too", "Anton", sans-serif; } }
+      font-family: "Anton", sans-serif; } }
 
 * {
   margin: 0; }
@@ -257,7 +253,7 @@ header {
       transition: width 0.5s;
       font-size: 3px;
       font-size: 3rem;
-      font-family: "Big Noodle Too", "Anton", sans-serif;
+      font-family: "Anton", sans-serif;
       letter-spacing: 2px; }
     header .wrapper .input__bar.show {
       display: block;
@@ -273,13 +269,13 @@ header {
         header .wrapper .input__bar.show {
           font-size: 2.5px;
           font-size: 2.5rem;
-          font-family: "Big Noodle Too", "Anton", sans-serif;
+          font-family: "Anton", sans-serif;
           width: 60%; } }
       @media (max-width: 600px) {
         header .wrapper .input__bar.show {
           font-size: 2px;
           font-size: 2rem;
-          font-family: "Big Noodle Too", "Anton", sans-serif; } }
+          font-family: "Anton", sans-serif; } }
     header .wrapper .input__submit {
       display: none; }
     header .wrapper .OW__Text {
@@ -466,12 +462,12 @@ main {
         line-height: 1;
         font-size: 2.75px;
         font-size: 2.75rem;
-        font-family: "Big Noodle Too", "Anton", sans-serif; }
+        font-family: "Anton", sans-serif; }
         @media (max-width: 600px) {
           main .hero__container .hero__info li span {
             font-size: 2px;
             font-size: 2rem;
-            font-family: "Big Noodle Too", "Anton", sans-serif; } }
+            font-family: "Anton", sans-serif; } }
     main .hero__container #map {
       grid-row-end: -1;
       grid-column: 1 / -1;
