--- a/dev/styles/_typography.scss
+++ b/dev/styles/_typography.scss
@@ -1,4 +1,5 @@
 $nunito: 'Nunito Sans', sans-serif;
+$secondaryFont: 'Anton', sans-serif;
 
 @mixin title-styles($sizeValue) {
     font-size: $sizeValue * 1px;
@@ -14,7 +15,7 @@ $nunito: 'Nunito Sans', sans-serif;
 }
 
 @font-face {
-    font-family: "Big Noodle Too";
+    font-family: 'Big Noodle Too';
     src: url(../../Font/big_noodle_titling.ttf) format("truetype");
 }
 
